[package]
name = "rustpipe-sc"
version = "0.3.0"
edition = "2021"
description = "Fast single-cell and spatial transcriptomics in Rust"
license = "GPL-3.0"
repository = "https://github.com/jwg054000/RustPipe-SC"
authors = ["Prairie Bio"]
keywords = ["bioinformatics", "single-cell", "rna-seq", "spatial-transcriptomics"]
categories = ["science", "command-line-utilities"]
rust-version = "1.75"

[[bin]]
name = "rustpipe-sc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3"
rayon = "1.10"
rand = "0.9"
rand_distr = "0.5"
ordered-float = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sprs = "0.11"
ndarray = { version = "0.16", features = ["rayon"] }
hdf5-metno = { version = "0.12", optional = true }
mimalloc = "0.1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[features]
default = []
hdf5 = ["dep:hdf5-metno"]

[dev-dependencies]
tempfile = "3"
approx = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
